--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^6.0.8",
+    "@tabler/icons-react": "^2.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
